--- a/automation/services-cluster-day2.yaml
+++ b/automation/services-cluster-day2.yaml
@@ -124,7 +124,21 @@
         name: install_cost_management_from_subscription
       vars:
         cluster_address: "{{ ocp_cluster_address }}"
+        
+    - include_role:
+        name: install_argocd_from_subscription
+      vars:
+        cluster_address: "{{ ocp_cluster_address }}"
 
+    - include_role:
+        name: install_openshift_pipelines_from_subscription
+      vars:
+        cluster_address: "{{ ocp_cluster_address }}"       
+    
+    - include_role:
+        name: install_developer_hub_from_subscription
+      vars:
+        cluster_address: "{{ ocp_cluster_address }}"
 
     # TODO Cleanup Automation Admin Accounts
 
