--- a/automation/shared-cluster-day2.yaml
+++ b/automation/shared-cluster-day2.yaml
@@ -33,6 +33,11 @@
     - include_role:
         name: admin_config_ldap
 
+    - include_role:
+        name: admin_config_shared_cluster_sa
+      vars:
+        cluster_address: "{{ ocp_cluster_address }}"     
+
     - name: Update Labels on Worker Machine Pools
       command:
         argv:
@@ -88,26 +93,18 @@
         cluster_address: "{{ ocp_cluster_address }}"
 
     - include_role:
-        name: install_openshift_pipelines
+        name: configure_developer_hub
       vars:
         cluster_address: "{{ ocp_cluster_address }}"
-
-    - include_role:
-        name: install_openshift_gitops
-      vars:
-        cluster_address: "{{ ocp_cluster_address }}"
-
-    - include_role:
-        name: install_developer_hub
-      vars:
-        cluster_address: "{{ ocp_cluster_address }}"
-
+ 
     - include_role:
         name: import_managed_cluster
       vars:
         managed_cluster_address: "{{ ocp_cluster_address }}"
         managed_cluster_name: "{{ cluster_name }}"
+        managed_cluster_port: "{{ k8s_port }}"
         hub_address: "{{ hub_cluster_address }}"
+        hub_cluster_port: "{{ k8s_port }}"
         managed_admin_user: "{{ cluster_admin_user }}"
         managed_admin_password: "{{ cluster_admin_password }}"
 
