--- a/automation/roles/admin_config_rbac/tasks/main.yaml
+++ b/automation/roles/admin_config_rbac/tasks/main.yaml
@@ -14,7 +14,7 @@
       subjects:
         - kind: Group
           apiGroup: rbac.authorization.k8s.io
-          name: OSCP-Middleware-Admins
+          name: cluster-admin-group
       roleRef:
         apiGroup: rbac.authorization.k8s.io
         kind: ClusterRole
