--- a/acm-policies/install-quay/config/policy-quay-configstore.yaml
+++ b/acm-policies/install-quay/config/policy-quay-configstore.yaml
@@ -11,5 +11,5 @@ spec:
           serviceAccountRef:
             name: externalsecret-operator-config-external-secrets   ##The Service Account $SA_NAME that is going to have access to the ocp secret)
             namespace: local-quay 
-      region: us-east-1
+      region: '{{ fromConfigMap "acm-install-policies" "aws-config" "region" }}'
       service: SecretsManager
