--- a/automation/shared-cluster-day2.yaml
+++ b/automation/shared-cluster-day2.yaml
@@ -93,9 +93,11 @@
         cluster_address: "{{ ocp_cluster_address }}"
 
     - include_role:
-        name: configure_developer_hub
+        name: aws_create_configmap
       vars:
         cluster_address: "{{ ocp_cluster_address }}"
+        service_account_name: "{{ cluster_admin_service_account_name }}"
+        service_account_namespace: "{{ cluster_admin_service_account_namespace }}"
  
     - include_role:
         name: import_managed_cluster
